# AMAN-Browser

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/extensions/: background.js  content.js  manifest.json
app/src/main/assets/models/: README.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: image_processor.h  thread_pool.h
app/src/main/cpp/src/: image_processor.cpp  inference_engine.cpp  jni_bridge.cpp  thread_pool.cpp
app/src/main/res/drawable/: ic_add.xml  ic_aman_launcher_foreground.xml  ic_aman_launcher_monochrome.xml  ic_aman_logo.xml  ic_apps.xml  ic_arrow_back.xml  ic_arrow_forward.xml  ic_browser.xml  ic_close.xml  ic_download.xml  ic_eye_off.xml  ic_facebook.xml  ic_history.xml  ic_home.xml  ic_instagram.xml  ic_linkedin.xml  ic_lock.xml  ic_reddit.xml  ic_refresh.xml  ic_search.xml  ic_settings.xml  ic_shield.xml  ic_stats.xml  ic_tabs.xml  ic_tiktok.xml  ic_twitter.xml  ic_vpn_lock.xml  ic_youtube.xml
app/src/main/res/font/: aman_sans.xml
app/src/main/res/layout/: activity_main.xml  activity_webapp.xml  fragment_browser.xml  fragment_home.xml  fragment_onboarding.xml  fragment_settings.xml  fragment_stats.xml  item_onboarding_picker.xml  item_quick_access.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/navigation/: nav_graph.xml
scripts/: download_models.sh  nudenet_to_mediapipe.py
tools/model_convert/: convert.sh
(+42 files in other folders)
